$Id$                       -*-text-*-


**** 0.66 NOT RELEASED YET

Fix rt.cpan.org #49035

    Comment parsing fixed: Semicolon in character string blocks (such
    as in TXT and NPTR) were only recognized when escaped.
    Also fixed the NAPTR regular expression to not interpret 
    "bla' 'foo" as two strings bla and foo, but as one: bla' 'foo

Fix cd flag settings 

    Resolver bug and fix reported by Jon Haidu.


**** 0.65 January 26, 2009

Fix rt.cpan.org #41076

    When the AAAA object was constructed with new_from_hash with an
    address containing the "::" shorthand notation normalization was
    not done properly.

Fix rt.cpan.org #42375

    Typo in Win32.pm Registry root.



**** 0.64 December 30, 2008

Feature rt.cpan.org #36656

    Added support for the APL record (RFC 3123)
    The module consists of a list of Address Prefix Item objects
    as defined in the Net::DNS::RR::APL::ApItem class.
    NOTE: Class and its interface may be subject to change.

    
Fix rt.cpan.org #11931 Wrong nameserver list handling in
                       Net::DNS::Resolver::Win32


    The init method has been rewritten to be based on WIN32::IPhelper for
    the selection of the domain and the IP addresses. This is believed to 
    be more portable than trying to fetch the data from the registry.
    We still trying to get the searchlist from the registry.

    WARNING: If you use Perl under WIN32 (eg ActivePerl or Strawberry Perl)
    then your module dependency graph has changed drastically

Fix IPv6 modules
    When IO::Socket::INET6 was available but Socket6 was not the code would
    recurse to infinity.

Fix rt.cpan.org #21757 and Feature: Connectivity during test
    Addition of --no-IPv6-tests and --IPv6-tests option in Makefile.PL.
    Note: This causes two questions to be asked when building the
    Makefile instead of one.

    Besides the test suites are constructed so that all the connectivity testing